# Epistemos-RETRO

./: .gitignore  AGENTS.md  Cargo.toml  index.html  package-lock.json  package.json
.cargo/: config.toml
.codex/: CODEX_MEMORY.md
.codex/knowledge-transfer/: RETRO-ENGINEERING-BIBLE.md
.codex/knowledge-transfer/claude-config/: CLAUDE.md  global-CLAUDE.md
.codex/knowledge-transfer/docs/: audit-progress.md
.codex/knowledge-transfer/mac-reference/: 2026-03-02-competitive-execution-roadmap.md  future-work-audit.md  mac-CLAUDE.md
.codex/knowledge-transfer/memory/: MEMORY.md  epistemos.md
.codex/knowledge-transfer/plans/: 2026-03-01-phase1-scaffold.md  2026-03-01-settings-page-design.md  2026-03-01-unified-gap-report.md
crates/embeddings/: Cargo.toml
crates/embeddings/src/: error.rs  lib.rs  onnx.rs  processor.rs  store.rs
crates/engine/: Cargo.toml
crates/engine/src/: chat_context.rs  citations.rs  cost.rs  lib.rs  orchestrator.rs  pipeline.rs  prompts.rs  query_analyzer.rs  signals.rs  soar.rs  triage.rs
crates/engine/src/llm/: anthropic.rs  error.rs  factory.rs  google.rs  mod.rs  ollama.rs  openai.rs
crates/engine/src/query/: ast.rs  compiler.rs  mod.rs  parser.rs  runtime.rs  saved.rs  token.rs
crates/graph/: Cargo.toml
crates/graph-render/: Cargo.toml
crates/graph-render/src/: lib.rs
crates/graph/src/: builder.rs  extractor.rs  lib.rs  search.rs  store.rs  tests.rs
crates/storage/: Cargo.toml
crates/storage/src/: db.rs  diff.rs  error.rs  ids.rs  lib.rs  tests.rs  types.rs
crates/storage/tests/: ids_test.rs
crates/sync/: Cargo.toml
crates/sync/src/: block_parser.rs  block_reconciler.rs  error.rs  lib.rs  vault.rs  watcher.rs
crates/ui-physics/: Cargo.toml
crates/ui-physics/src/: fps_mode.rs  fps_player.rs  lib.rs  spring.rs  tests.rs  world.rs
docs/: HANDOFF.md  IMPLEMENTATION-PLAN.md  RETRO-VS-MACOS-COMPARISON.md  audit-progress.md
docs/plans/: 2026-02-28-retro-edition-design.md  2026-02-28-retro-edition-engineering-standards.md  2026-02-28-retro-edition-plan.md  2026-03-01-fps-explore-mode-design.md  2026-03-01-fps-explore-mode-plan.md  2026-03-01-phase-implementation-plans.md  2026-03-03-full-rust-rewrite-design.md  2026-03-03-phase1-foundation-2d-graph.md  2026-03-04-unified-knowledge-page.md  fps-exploration-mode.md
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: chat.rs  folders.rs  graph.rs  mod.rs  notes.rs  physics.rs  research.rs  search.rs  system.rs  vault.rs
src/components/: theme-provider.tsx
src/components/assistant/: mini-chat-chat-tab.tsx  mini-chat-history-tab.tsx  mini-chat-notes-tab.tsx  mini-chat-research-tab.tsx  mini-chat.tsx
src/components/chat/: chat-history-sheet.tsx  chat.tsx  feature-buttons.tsx  glass-bubble-button.tsx  greeting-typewriter.tsx  live-controls.tsx  message-layman.tsx  message-research.tsx  message.tsx  messages.tsx  multimodal-input.tsx  recent-chats.tsx  research-mode-bar.tsx  soar-stone-card.tsx  steering-feedback.tsx  steering-indicator.tsx  streaming-text.tsx  thinking-accordion.tsx  thinking-controls.tsx  truth-bot-card.tsx
src/components/command-palette/: command-palette.tsx  index.ts
src/components/decorative/: pixel-mascots.tsx  star-field.tsx
src/components/decorative/wallpapers/: sunny.tsx  sunset.tsx  thematic.tsx
src/components/graph/: graph-canvas.tsx  graph-controls.tsx  graph-inspector.tsx  graph-sidebar.tsx
src/components/knowledge/: segmented-toggle.tsx
src/components/layout/: app-shell.tsx  error-boundary.tsx  page-shell.tsx  page-transition.tsx  top-nav.tsx
src/components/notes/: block-ref-autocomplete.tsx  concept-panel.tsx  diff-sheet.tsx  diff-view.tsx  mini-graph-view.tsx  note-ai-chat.tsx  notes-sidebar.tsx  table-of-contents.tsx  vault-picker.tsx  version-card.tsx  version-timeline.tsx
src/components/notes/block-editor/: block-renderer.tsx  context-menu.tsx  editor.tsx  slash-menu.tsx
src/components/notes/transclusion/: index.ts  transclusion-autocomplete.tsx  transclusion-block.tsx  transclusion-overlay.tsx
src/components/settings/: advanced-section.tsx  appearance-section.tsx  cost-section.tsx  data-section.tsx  inference-section.tsx  services-section.tsx  soar-section.tsx
src/components/shared/: index.ts  markdown.tsx  toast-container.tsx
src/components/ui/: alert-dialog.tsx  chat-input.tsx  dropdown-menu.tsx  glass-panel.tsx  pill-tabs.tsx  scroll-area.tsx  switch.tsx
src/components/viz/: concept-hierarchy-panel.tsx  concept-mini-map.tsx  portal-sidebar.tsx
src/hooks/: use-assistant-stream.ts  use-chat-stream.ts  use-is-dark.ts  use-scroll-to-bottom.ts  use-setup-guard.ts  use-spring.ts  use-theme.ts  use-typewriter.ts
src/lib/: bindings.ts  debug-logger.ts  device-detection.ts  perf.ts  tauri-bridge.ts  types.ts  wasm-loader.ts
src/lib/engine/soar/: types.ts
src/lib/graph/: spatial-index.ts
src/lib/motion/: motion-config.ts
src/lib/notes/: learning-protocol.ts  learning-scheduler.ts  sync-client.ts  toc.ts  types.ts
src/lib/store/: hydrate.ts  physics-positions.ts  use-pfc-store.ts  use-steering-store.ts
src/lib/store/slices/: concepts.ts  controls.ts  inference.ts  message.ts  notes.ts  pipeline.ts  portal.ts  soar.ts  toast.ts  ui.ts
src/pages/: analytics.tsx  chat.tsx  daemon.tsx  graph.tsx  knowledge.tsx  landing.tsx  library.tsx  notes.tsx  settings.tsx
src/styles/: globals.css
