[workspace]
members = [
    "src-tauri",
    "crates/storage",
    "crates/engine",
    "crates/graph",
    "crates/sync",
    "crates/embeddings",
    "crates/graph-render",
    "crates/ui-physics",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
