[package]
name = "epistemos-retro"
version = "0.1.0"
description = "Epistemos Retro Edition — Knowledge Graph for Windows"
authors = ["you"]
edition = "2021"

[lib]
name = "epistemos_retro_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "epistemos-retro"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
