[package]
name = "epistemos-retro"
version = "0.1.0"
description = "Epistemos Retro Edition — Knowledge Graph for Windows"
authors = ["you"]
edition = "2021"

[lib]
name = "epistemos_retro_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "epistemos-retro"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
storage = { path = "../crates/storage" }
engine = { path = "../crates/engine" }
graph = { path = "../crates/graph" }
sync = { path = "../crates/sync" }
ui-physics = { path = "../crates/ui-physics" }
embeddings = { path = "../crates/embeddings" }
reqwest = { workspace = true }
rustc-hash = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
tokio-util = { workspace = true }
tauri-specta = { version = "2.0.0-rc.21", features = ["typescript"] }
specta = { version = "2.0.0-rc.22", features = ["derive", "serde_json"] }
specta-typescript = "0.0.9"
