[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
storage = { path = "../storage" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }
futures = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
rustc-hash = { workspace = true }
