[package]
name = "storage"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }
specta = { version = "2.0.0-rc.22", features = ["derive", "uuid"] }
