[package]
name = "ui-physics"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rustc-hash = { workspace = true }
specta = { version = "2.0.0-rc.22", features = ["derive"] }
wasm-bindgen = "0.2.114"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rapier3d = "0.32"
graph = { path = "../graph" }
storage = { path = "../storage" }
